Stopped overlapping of favourite button and titles on mobile

--- a/site/web/app/themes/host/assets/css/main.css
+++ b/site/web/app/themes/host/assets/css/main.css
@@ -2383,6 +2383,7 @@ dl.-horizontal dd ~ dd {
   to {
     transform: scale(0);
     opacity: 0;
+    visibility: hidden;
   }
 }
 
@@ -2420,6 +2421,7 @@ dl.-horizontal dd ~ dd {
   position: absolute;
   z-index: 20;
   content: "";
+  display: inline-block;
 }
 
 .slideshow--animate-in:before {
@@ -8910,6 +8912,9 @@ a.article-tile__link:hover .article-tile__location {
   }
   .slideshow--large-pagination .slideshow-pagination--pn .slideshow-pagination__button:hover{
     background: transparent;
+  }
+  .listed-property__header{
+    max-width: calc(100% - 40px);
   }
   .testimonial-wall__image{
     display: none;
